# pylang

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PLAN.md  README.md  builtin.c  main.py  main_.py  pylang.py  test.py  test_if.py  test_if2  test_if2.py  test_while.py
grammar/: PyLang.g4  Python3.g4  PythonLexer.g4  __init__.py  fib.ll  my_visitor.py  pylang_visitor.py
pylang-cli/: Cargo.toml
pylang-cli/src/: main.rs
pylang-cranelift/: Cargo.toml
pylang-cranelift/src/: codegen.rs  emit.rs  lib.rs  lower.rs
pylang-front/: Cargo.toml
pylang-front/src/: ast.rs  desugar.rs  lexer.rs  lib.rs  parser.rs  sema.rs
pylang-ir/: Cargo.toml
pylang-ir/src/: lib.rs
pylang-runtime/: Cargo.toml
pylang-runtime/src/: lib.rs
pylang-std/: Cargo.toml
pylang-std/src/: builtins.py  dict.py  lib.rs  list.py  set.py
tests/: fib.py  fib.solang  http.py  main.py  numba_test.py
